<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jaredkohler.ontimefitness.Options_Activity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/editWeight"
        android:text="@string/defaultWeight" />

    <Button
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editCreate"
        android:layout_alignRight="@+id/editHeight"
        android:layout_alignEnd="@+id/editHeight"
        android:id="@+id/button3" />

    <Button
        android:text="@string/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:id="@+id/editCreate"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"
        android:onClick="createUser"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:id="@+id/editHeight"
        android:text="@string/defaultHeight"
        android:layout_below="@+id/textHeight"
        android:layout_alignLeft="@+id/editWeight"
        android:layout_alignStart="@+id/editWeight" />

    <TextView
        android:text="@string/labelWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/labelHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textHeight"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/editWeight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_above="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp" />

    <TextView
        android:text="@string/labelGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_above="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editConfirmPass"
        android:layout_below="@+id/editPassword"
        android:layout_alignLeft="@+id/editPassword"
        android:layout_alignStart="@+id/editPassword"
        android:hint="@string/user" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editUsername"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editWeight"
        android:layout_alignStart="@+id/editWeight"
        android:hint="@string/pass" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:layout_below="@+id/editUsername"
        android:layout_alignLeft="@+id/editUsername"
        android:layout_alignStart="@+id/editUsername"
        android:hint="@string/confirmPass" />
</RelativeLayout>
