<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jaredkohler.ontimefitness.Options_Activity">

    <Button
        android:text="@string/edit"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRemoveSchedule"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="110dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp"
        android:onClick="Edit"/>

    <Button
        android:text="@string/remove"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRemove"
        android:layout_alignBaseline="@+id/buttonRemoveSchedule"
        android:layout_alignBottom="@+id/buttonRemoveSchedule"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/exit"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonRemove"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:id="@+id/editCreate"
        android:onClick="Exit"/>


    <Button
        android:text="@string/active"
        android:layout_height="wrap_content"
        android:id="@+id/buttonActive"
        android:layout_width="110dp"
        android:layout_alignBaseline="@+id/buttonRemoveSchedule"
        android:layout_alignBottom="@+id/buttonRemoveSchedule"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="Active"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerSchedules"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:text="@string/scheduleSelectPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textScheduleSelector" />

</RelativeLayout>
