<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/activity_create_"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.example.jaredkohler.ontimefitness.Create_Activity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editUsername"
        android:hint="@string/user"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editPassword"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editWeight"
        android:text="@string/defaultWeight"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editHeight"
        android:layout_marginTop="139dp"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmPass"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editHeight"/>

    <Button
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:onClick="Exit"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/editHeight"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/editCreate"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="40dp"
        app:layout_constraintHorizontal_bias="0.0"/>

    <Button
        android:text="@string/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editCreate"
        android:onClick="createUser"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintRight_toRightOf="@+id/textHeight"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/editHeight"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="69dp"
        android:layout_marginRight="68dp"
        app:layout_constraintHorizontal_bias="0.25"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editHeight"
        android:text="@string/defaultHeight"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/editWeight"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:text="@string/labelWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editWeight"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editWeight"/>

    <TextView
        android:text="@string/labelHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textHeight"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="103dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editWeight"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.809"/>

    <Spinner
        android:layout_width="158dp"
        android:layout_height="23dp"
        android:id="@+id/spinner"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editWeight"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:text="@string/labelGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        android:layout_marginStart="28dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="21dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        android:layout_marginLeft="-198dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editConfirmPass"
        android:hint="@string/confirmPass"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editWeight"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editWeight"
        app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:hint="@string/pass"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editConfirmPass"
        app:layout_constraintTop_toBottomOf="@+id/editUsername"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editConfirmPass"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>
