<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/activity_options_"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.example.jaredkohler.ontimefitness.Options_Activity">

    <Button
        android:text="@string/button_schedule"
        android:layout_height="50dp"
        android:id="@+id/buttonSchedule"
        android:layout_width="295dp"
        android:onClick="loadSchedule"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSelect"
        android:text="@string/selectSchedule"
        android:onClick="loadSelectSchedule"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSchedule"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/buttonSchedule"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonSchedule"
        app:layout_constraintHorizontal_bias="1.0"/>

    <Button
        android:text="@string/dailyRoute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRoute"
        android:onClick="loadDailyRoute"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/buttonSelect"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelect"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/buttonSelect"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBody"
        android:text="@string/bodySettings"
        android:onClick="loadBodySettings"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/buttonRoute"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonRoute"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/buttonRoute"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"/>

</android.support.constraint.ConstraintLayout>
